# pyroadacoustics

./: .gitignore  LICENSE  README.md  SoundSource.py  angle_dep_filter.ipynb  delay_line.ipynb  delay_line_test.ipynb  demo.py  double_delay_line.ipynb  fractional_delay_filters.ipynb  h_fir.mat  movingSource.py  parameters.py  pyproject.toml  requirements.txt  setup.py  simulator_demo.ipynb  test_snr.ipynb
.ipynb_checkpoints/: delay_line-checkpoint.ipynb
old/: MicrophoneArray.py  Simulator.py  asphalt_absorption.py  atmospheric_functions.py  interpolation_filters.py  microphone_array.py  simulator_manager.py  test_modules.py  test_simulator.py
pyroadacoustics/: __init__.py  delayLine.py  environment.py  material.py  microphoneArray.py  simulatorManager.py  soundSource.py
research_notebooks/: air_absorption.ipynb  air_absorption_adaptive.ipynb  air_absorption_neural_net.ipynb  angle_dep_filter.ipynb  angle_filter_log.ipynb  delay_line_test.ipynb  double_delay_line.ipynb  export_test.py  firls_optimization.ipynb  fractional_delay_filters.ipynb  fractional_delay_test.ipynb  reflection_logarithmic_interpolation.ipynb
src/: DelayLine.py  Environment.py  Material.py  SimulatorManager.py  SoundSource.py  asphalt_absorption.py  atmospheric_functions.py  delay_line.py  materials.json  microphone_array.py  pyroadacoustics.py  simulator_manager.py  source.py  test_modules.py  test_simulator.py
tests/: test_delayline.py  test_environment.py  test_material.py  test_simulator_manager.py  test_source.py
